[project]
name = "htmdl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "arrow>=1.3.0",
    "click>=8.2.1",
    "jinja2>=3.1.6",
    "poethepoet>=0.37.0",
    "pyenvclasses>=0.1.2",
    "pygments>=2.19.2",
    "ruff>=0.12.12",
    "ty>=0.0.1a20",
]


[tool.poe.tasks]
type-check = "uv run ty check"
lint = "uv run ruff check"
format = "uv run ruff format"